# introduction-to-zephyr

workspace/apps/02_solution_hello_blink/lib/say_hello/: CMakeLists.txt
